# pyop3

./: .pre-commit-config.yaml  README.md  TODO-15.07.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yaml  test.yaml  test.yml
pyop3/: __init__.py  arguments.py  axis.py  buffer.py  cache.py  codegen.py  config.py  darray.py  device.py  distarray.py  distarray2.py  domains.py  dtypes.py  exceptions.py  expr_visitors.py  exprs.py  functions.py  index.py  insn_visitors.py  lang.py  log.py  loop.py  loopexpr.py  loops.py  mesh.py  mirrored_array.py  mpi.py  multiaxis.py  sf.py  space.py  sparsity.pyx  target.py  tensor.py  tensors.py  tlang.py  transform.py  transforms.py  tree.py  utils.py  viz.py
pyop3/array/: __init__.py  base.py  harray.py  petsc.py  transforms.py
pyop3/axes/: __init__.py  parallel.py  tree.py
pyop3/axtree/: __init__.py  layout.py  parallel.py  tree.py
pyop3/codegen/: __init__.py  exe.py  ir.py  loopexpr2loopy.py  loopy.py  loopy2exe.py  pseudo.py  tlang.py  transforms.py
pyop3/distarray/: __init__.py  base.py  dat.py  indexed.py  mirrored_array.py  multiarray.py  petsc.py
pyop3/extras/: debug.py  viz.py
pyop3/indices/: __init__.py  tree.py
pyop3/ir/: lower.py  transform.py
pyop3/itree/: __init__.py  parse.py  tree.py
scripts/: demo_view_axes.py  dev.py  draw-tensor  extruded_sandbox.py  map_composition.py  plot_expressions.py  requirements.py
tests/: conftest.py  test_axis_ordering.py  test_everything.py  test_indexing.py  test_loopexpr.py  test_main.py  test_multiarray.py  test_pseudocode.py  test_sparsity.py  test_tree.py
(+42 files in other folders)
