[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pyop3"
version = "0.1"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
]
tests = [
  "pytest",
  "pytest-mpi @ git+https://github.com/firedrakeproject/pytest-mpi",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
