[build-system]
requires = [
  "setuptools",
  "cython<3",
  "numpy",
  "petsc4py"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyop3"
version = "0.1"
dependencies = [
  "pyrsistent",
  "numpy",
  "loopy @ git+https://github.com/firedrakeproject/loopy.git",
  "mpi4py",
  "petsc4py"
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
]
tests = [
  "pytest",
  "pytest-mpi @ git+https://github.com/firedrakeproject/pytest-mpi",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
