[build-system]
requires = [
  "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyop3"
version = "0.1"
dependencies = [
  "mpi4py",
  "numpy",
  "petsc4py",
  "pyrsistent",
  "loopy @ git+https://github.com/firedrakeproject/loopy.git",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pytest",
  "pytest-timeout",
  "pytest-mpi @ git+https://github.com/firedrakeproject/pytest-mpi",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
timeout = "300"
